# api_bashPilote

./: .env  pyproject.toml
src/: db.sqlite3
src/app/: __init__.py  config.py
src/app/core/: __init__.py  database.py  logging.py  scheduler.py  script_exec.py  script_manager.py
src/app/models/: __init__.py  job.py  script.py
src/app/routes/: __init__.py  jobs.py  scripts.py
src/app/utils/: __init__.py  auth.py  security.py
src/instance/: db.sqlite3
src/tests/: __init__.py  test_jobs.py  test_scripts.py
